--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "fitness-functions": "node development/fitness-functions/index.js",
     "generate-beta-commit": "node ./development/generate-beta-commit.js",
     "validate-branch-name": "validate-branch-name",
-    "label-prs": "ts-node .github/scripts/label-prs.ts"
+    "label-prs": "ts-node ./.github/scripts/label-prs.ts"
   },
   "resolutions": {
     "analytics-node/axios": "^0.21.2",
