--- a/package.json
+++ b/package.json
@@ -229,7 +229,7 @@
     "@metamask/address-book-controller": "^1.0.0",
     "@metamask/announcement-controller": "^2.0.1",
     "@metamask/approval-controller": "^1.0.0",
-    "@metamask/assets-controllers": "^4.0.1",
+    "@metamask/assets-controllers": "5.1.0-preview.7e9895d",
     "@metamask/base-controller": "^1.0.0",
     "@metamask/contract-metadata": "^2.3.1",
     "@metamask/controller-utils": "^3.1.0",
