--- a/package.json
+++ b/package.json
@@ -207,7 +207,11 @@
     "fast-json-patch@^3.1.1": "patch:fast-json-patch@npm%3A3.1.1#./.yarn/patches/fast-json-patch-npm-3.1.1-7e8bb70a45.patch",
     "request@^2.83.0": "patch:request@npm%3A2.88.2#./.yarn/patches/request-npm-2.88.2-f4a57c72c4.patch",
     "request@^2.88.2": "patch:request@npm%3A2.88.2#./.yarn/patches/request-npm-2.88.2-f4a57c72c4.patch",
-    "request@^2.85.0": "patch:request@npm%3A2.88.2#./.yarn/patches/request-npm-2.88.2-f4a57c72c4.patch"
+    "request@^2.85.0": "patch:request@npm%3A2.88.2#./.yarn/patches/request-npm-2.88.2-f4a57c72c4.patch",
+    "@metamask/controller-utils@^3.1.0": "patch:@metamask/controller-utils@npm%3A3.1.0#./.yarn/patches/@metamask-controller-utils-npm-3.1.0-7330964428.patch",
+    "@metamask/controller-utils@^3.0.0": "patch:@metamask/controller-utils@npm%3A3.1.0#./.yarn/patches/@metamask-controller-utils-npm-3.1.0-7330964428.patch",
+    "@metamask/controller-utils@^1.0.0": "patch:@metamask/controller-utils@npm%3A3.1.0#./.yarn/patches/@metamask-controller-utils-npm-3.1.0-7330964428.patch",
+    "@metamask/controller-utils@^2.0.0": "patch:@metamask/controller-utils@npm%3A3.1.0#./.yarn/patches/@metamask-controller-utils-npm-3.1.0-7330964428.patch"
   },
   "dependencies": {
     "@babel/runtime": "^7.5.5",
